feat: added styling to about page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,10 @@
 ---
-
+const pageTitle = "Home Page";
 ---
 
+<head>
+  <title>{pageTitle}</title>
+</head>
 <html lang='en'>
   <head>
     <meta charset='utf-8' />
