--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import Navigation from "../components/Navigation.astro";
+
 const pageTitle = "Home Page";
 ---
 
@@ -14,10 +16,7 @@ const pageTitle = "Home Page";
     <title>Astro</title>
   </head>
   <body>
-    <a href='/'>Home</a>
-    <a href='/about/'>About</a>
-    <a href='/blog/'>Blog</a>
-
+    <Navigation />
     <h1>My Astro Site</h1>
   </body>
 </html>
