feat: added header and footer components

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+import Footer from "../components/Footer.astro";
+
 const pageTitle = "My astro learning blog!";
 ---
 
@@ -17,4 +19,6 @@ const pageTitle = "My astro learning blog!";
     <li><a href='/posts/post-2/'>Post 2</a></li>
     <li><a href='/posts/post-3/'>Post 3</a></li>
   </ul>
+
+  <Footer />
 </body>
