--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import Footer from "../components/Footer.astro";
+
 import "../styles/global.css";
 
 const pageTitle = "About Me";
@@ -87,5 +89,7 @@ const textCase = "uppercase";
         <p>My goal is not 3 days.</p>
       )
     }
+
+    <Footer />
   </body>
 </html>
