--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
 
 const pageTitle = "Home Page";
 ---
@@ -16,7 +18,8 @@ const pageTitle = "Home Page";
     <title>Astro</title>
   </head>
   <body>
-    <Navigation />
+    <Header />
     <h1>My Astro Site</h1>
+    <Footer />
   </body>
 </html>
