--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,24 +1,14 @@
 ---
-import Footer from "../components/Footer.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const pageTitle = "My astro learning blog!";
 ---
 
-<head>
-  <title>{pageTitle}</title>
-</head>
-<body>
-  <a href='/'>Home</a>
-  <a href='/about/'>About</a>
-  <a href='/blog/'>Blog</a>
-
-  <h1>My Astro Learning Blog</h1>
+<BaseLayout pageTitle={pageTitle}>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
     <li><a href='/posts/post-1/'>Post 1</a></li>
     <li><a href='/posts/post-2/'>Post 2</a></li>
     <li><a href='/posts/post-3/'>Post 3</a></li>
   </ul>
-
-  <Footer />
-</body>
+</BaseLayout>
