--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,9 +1,9 @@
 ---
+import BaseLayout from "./BaseLayout.astro";
 const { frontmatter } = Astro.props;
 ---
 
-<h1>{frontmatter.title}</h1>
-<p>Written by {frontmatter.author}</p>
-<p>Published date {frontmatter.pubDate.toString().slice(0, 10)}</p>
-<img src={frontmatter.image.url} alt={frontmatter.image.alt} />
-<slot />
+<BaseLayout pageTitle={frontmatter.title}>
+  <img src={frontmatter.image.url} alt={frontmatter.image.alt} />
+  <slot />
+</BaseLayout>
