--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,20 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 
+// will asynchronously loads all md post files
+const allPosts = await Astro.glob("../pages/posts/*.md");
 const pageTitle = "My astro learning blog!";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
-    <li><a href='/posts/post-1/'>Post 1</a></li>
-    <li><a href='/posts/post-2/'>Post 2</a></li>
-    <li><a href='/posts/post-3/'>Post 3</a></li>
+    {
+      allPosts.map((post) => (
+        <li>
+          <a href={post.url}>{post.frontmatter.title}</a>
+        </li>
+      ))
+    }
   </ul>
 </BaseLayout>
