--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,10 +1,14 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
-const { frontmatter, tags } = Astro.props;
+const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
-  <img src={frontmatter.image.url} alt={frontmatter.image.alt} />
+  <p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
+  <img
+    src={frontmatter.image?.url || "https://docs.astro.build/assets/rays.webp"}
+    alt={frontmatter.image?.alt || "no image"}
+  />
   <slot />
   <div class='tags'>
     {
