--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -12,6 +12,7 @@ const { frontmatter } = Astro.props;
   <p transition:animate={fade({ duration: "2s" })}>
     <em>{frontmatter.description}</em>
   </p>
+  <p>Written by: <a href='/about/'>{frontmatter.author}</a></p>
   <img
     src={frontmatter.image?.url || "https://docs.astro.build/assets/rays.webp"}
     alt={frontmatter.image?.alt || "no image"}
